configs/kafka-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose-all.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-1
  name: kafka-1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose-all.yml convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/ant-chat: "true"
        io.kompose.service: kafka-1
    spec:
      containers:
        - env:
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://:9092,PLAINTEXT_HOST://kafka-1:29092
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_INTER_BROKER_LISTENER_NAME
              value: PLAINTEXT
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "2"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper-1:22181,zookeeper-2:32181,zookeeper-3:33181
          image: confluentinc/cp-kafka:latest
          name: kafka-1
          ports:
            - containerPort: 29092
          resources: {}
      restartPolicy: Always
status: {}
