configs/kafka-1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose-all.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-1
  name: kafka-1
spec:
  ports:
    - name: "29092"
      port: 29092
      targetPort: 29092
  selector:
    io.kompose.service: kafka-1
status:
  loadBalancer: {}
