configs/kafka-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose-all.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-2
  name: kafka-2
spec:
  ports:
    - name: "39092"
      port: 39092
      targetPort: 39092
  selector:
    io.kompose.service: kafka-2
status:
  loadBalancer: {}
