configs/zookeeper-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose-all.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper-2
  name: zookeeper-2
spec:
  ports:
    - name: "32181"
      port: 32181
      targetPort: 2181
  selector:
    io.kompose.service: zookeeper-2
status:
  loadBalancer: {}
