configs/zookeeper-3-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe --file docker-compose-all.yml convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper-3
  name: zookeeper-3
spec:
  ports:
    - name: "33181"
      port: 33181
      targetPort: 2181
  selector:
    io.kompose.service: zookeeper-3
status:
  loadBalancer: {}
