configs/ant-chat-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: ant-chat
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/ant-chat: "true"
  podSelector:
    matchLabels:
      io.kompose.network/ant-chat: "true"
